# F-Vision

./: CMakeLists.txt  README.md  test.cpp
face_detection/: README.md
face_recognition/: .gitignore  README.md  config.py  data_conf.yaml  train.py
face_recognition/backbone/: backbone_def.py
face_recognition/dataset_utils/: data_evaluator.py  evaluate_dataset.py  evaluate_helpers.py  evaluator_dataset.py  extractor_embedding.py  module_eval.py  pairs_parser.py  test_lfw_dataset.py  train_dataset.py  verifacation.py
face_recognition/losses/: AdaCos.py  AdaM_Softmax.py  MV_Softmax.py  loss_def.py
inferences/: README.md
inferences/ncnn/face_recognition/: CMakeLists.txt  run.sh
inferences/ncnn/face_recognition/src/: inference.cpp
masked_face_recognition/: README.md
optimizer_framework/NCNN/: README.md
optimizer_framework/NCNN/face_recognition/: README.md
optimizer_framework/NCNN/masked_face_recognition/: README.md
optimizer_framework/ncnn/face_detection/: README.md
optimizer_framework/ncnn/masked_face_recognition/: CMakeLists.txt  README.md
optimizer_framework/ncnn/masked_face_recognition/src/: masked_face.cpp
optimizer_framework/ncnn/masked_face_recognition/src/masked_face/: masked_face_model.cpp
optimizer_framework/ncnn/masked_face_recognition/src/recognition/: recognition.cpp  recognition.h
src/: LFFD.cpp  LFFD.h
